--- a/lib/quizzaz_web/templates/layout/_user_menu.html.heex
+++ b/lib/quizzaz_web/templates/layout/_user_menu.html.heex
@@ -58,7 +58,7 @@
             d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
           />
         </svg>
-        <p class={if active_nav?(req_path, settings_path), do: "underline"}>Settings</p>
+        <p class={if active_nav?(req_path, settings_path), do: "underline"}><%= dgettext("menu", "Settings")%></p>
       </a>
       <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex items-start gap-2" do %>
         <svg
@@ -75,7 +75,7 @@
             d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
           />
         </svg>
-        <p>Log Out</p>
+        <p><%= dgettext("menu", "Log Out")%></p>
       <% end %>
       <a class="m-4 flex items-start gap-2" href={new_game_path}>
         <svg
@@ -92,7 +92,7 @@
             d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
           />
         </svg>
-        <p class={if active_nav?(req_path, new_game_path), do: "underline"}>Create</p>
+        <p class={if active_nav?(req_path, new_game_path), do: "underline"}><%= dgettext("menu", "Create")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={my_stuff_path}>
         <svg
@@ -109,7 +109,7 @@
             d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
           />
         </svg>
-        <p class={if active_nav?(req_path, my_stuff_path), do: "underline"}>My Stuff</p>
+        <p class={if active_nav?(req_path, my_stuff_path), do: "underline"}><%= dgettext("menu", "My Stuff")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={browse_path}>
         <svg
@@ -128,7 +128,7 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class={if active_nav?(req_path, browse_path), do: "underline"}>Browse</p>
+        <p class={if active_nav?(req_path, browse_path), do: "underline"}><%= dgettext("menu", "Browse")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={play_path}>
         <svg
@@ -150,7 +150,7 @@
             d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
           />
         </svg>
-        <p>Play</p>
+        <p><%= dgettext("menu", "Play")%></p>
       </a>
     <% else %>
       <a class="m-4 flex items-start gap-2" href={sign_up_path}>
@@ -168,7 +168,7 @@
             d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
           />
         </svg>
-        <p class={if active_nav?(req_path, sign_up_path), do: "underline"}>Sign Up</p>
+        <p class={if active_nav?(req_path, sign_up_path), do: "underline"}><%= dgettext("menu", "Sign Up")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={log_in_path}>
         <svg
@@ -185,7 +185,7 @@
             d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
           />
         </svg>
-        <p class={if active_nav?(req_path, log_in_path), do: "underline"}>Log In</p>
+        <p class={if active_nav?(req_path, log_in_path), do: "underline"}><%= dgettext("menu", "Log In")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={browse_path}>
         <svg
@@ -204,7 +204,7 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class={if active_nav?(req_path, browse_path), do: "underline"}>Browse</p>
+        <p class={if active_nav?(req_path, browse_path), do: "underline"}><%= dgettext("menu", "Browse")%></p>
       </a>
       <a class="m-4 flex items-start gap-2" href={play_path}>
         <svg
@@ -226,7 +226,7 @@
             d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
           />
         </svg>
-        <p>Play</p>
+        <p><%= dgettext("menu", "Play")%></p>
       </a>
     <% end %>
   </div>
@@ -255,7 +255,7 @@
             d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, settings_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Settings</p>
+        <p class={"#{if active_nav?(req_path, settings_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Settings")%></p>
       </a>
       <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex flex-col items-center gap-2" do %>
         <svg
@@ -272,7 +272,7 @@
             d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
           />
         </svg>
-        <p class="text-3xl">Log Out</p>
+        <p class="text-3xl"><%= dgettext("menu", "Log Out")%></p>
       <% end %>
       <a class="m-4 flex flex-col items-center gap-2" href={new_game_path}>
         <svg
@@ -289,7 +289,7 @@
             d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, new_game_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Create</p>
+        <p class={"#{if active_nav?(req_path, new_game_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Create")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={my_stuff_path}>
         <svg
@@ -306,7 +306,7 @@
             d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, my_stuff_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>My Stuff</p>
+        <p class={"#{if active_nav?(req_path, my_stuff_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "My Stuff")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={browse_path}>
         <svg
@@ -325,7 +325,7 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Browse</p>
+        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Browse")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={play_path}>
         <svg
@@ -347,7 +347,7 @@
             d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
           />
         </svg>
-        <p class="text-3xl">Play</p>
+        <p class="text-3xl"><%= dgettext("menu", "Play")%></p>
       </a>
     <% else %>
       <a
@@ -368,7 +368,7 @@
             d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, sign_up_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Sign Up</p>
+        <p class={"#{if active_nav?(req_path, sign_up_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Sign Up")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={log_in_path}>
         <svg
@@ -385,7 +385,7 @@
             d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, log_in_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Log In</p>
+        <p class={"#{if active_nav?(req_path, log_in_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Log In")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={browse_path}>
         <svg
@@ -404,7 +404,7 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Browse</p>
+        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}><%= dgettext("menu", "Browse")%></p>
       </a>
       <a class="m-4 flex flex-col items-center gap-2" href={play_path}>
         <svg
@@ -426,7 +426,7 @@
             d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
           />
         </svg>
-        <p class="text-3xl">Play</p>
+        <p class="text-3xl"><%= dgettext("menu", "Play")%></p>
       </a>
     <% end %>
   </div>
