--- a/lib/quizzaz_web/live/game_live/edit.html.heex
+++ b/lib/quizzaz_web/live/game_live/edit.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center my-8 text-center">
-  <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+  <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
     <.live_component
       module={QuizzazWeb.GameLive.FormComponent}
       id={@game.id || :new}
