--- a/lib/quizzaz_web/live/host_live/index.html.heex
+++ b/lib/quizzaz_web/live/host_live/index.html.heex
@@ -6,20 +6,20 @@
         src={Routes.static_path(@socket, "/images/question.png")}
         alt="question head"
       />
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <h3 class="text-3xl">To join this game please enter the following code:</h3>
-        <p class="text-black text-5xl"><%= @session_id %></p>
+        <p class="text-skin-info text-5xl"><%= @session_id %></p>
 
         <div class="flex flex-row flex-wrap gap-12 py-4 px-20">
           <%= for player <- @game_session.players do %>
-            <p class="text-3xl text-cyan-200"><%= player.name %></p>
+            <p class="text-3xl text-skin-secondary"><%= player.name %></p>
           <% end %>
         </div>
 
         <button phx-click="start-game" class="m-4 flex flex-col items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+            class="h-8 w-8 lg:h-10 lg:w-10 text-skin-secondary"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -44,17 +44,17 @@
           phx-change="select_duration"
           class="flex flex-col items-center w-full"
         >
-          <%= label(f, :duration, "Question Duration", class: "text-cyan-200 pb-2") %>
+          <%= label(f, :duration, "Question Duration", class: "text-skin-secondary pb-2") %>
           <%= select(f, :duration, 5..3000,
             selected: 30,
-            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-1/8"
+            class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg w-1/8"
           ) %>
         </.form>
       </div>
     <% :playing -> %>
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <h3 class="text-5xl">Playing</h3>
-        <div class="flex flex-row gap-8 text-3xl text-cyan-200">
+        <div class="flex flex-row gap-8 text-3xl text-skin-secondary">
           <p>time left:</p>
           <p><%= @countdown %></p>
         </div>
@@ -73,7 +73,7 @@
         <button phx-click="pause_game" class="m-4 flex flex-col items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-8 w-8 text-cyan-200"
+            class="h-8 w-8 text-skin-secondary"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -94,12 +94,12 @@
         </button>
       </div>
     <% :paused -> %>
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <h3 class="text-5xl">Game is Paused</h3>
         <button phx-click="next_question" class="m-4 flex flex-col items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-8 w-8 text-cyan-200"
+            class="h-8 w-8 text-skin-secondary"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -116,7 +116,7 @@
         </button>
         <div class="flex flex-row items-center flex-wrap justify-around gap-8 mt-8">
           <%= for player <- @players do %>
-            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-cyan-200">
+            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-skin-secondary">
               <p class="text-3xl"><%= player.name %></p>
               <p class="text-xl">score: <%= player.score %></p>
             </div>
@@ -124,11 +124,11 @@
         </div>
       </div>
     <% :finished -> %>
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <h3 class="text-5xl">Game is finished</h3>
         <div class="flex flex-row items-center flex-wrap justify-around gap-8 mt-8">
           <%= for player <- @players do %>
-            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-cyan-200">
+            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-skin-secondary">
               <p class="text-3xl"><%= player.name %></p>
               <p class="text-xl">score: <%= player.score %></p>
             </div>
