--- a/lib/quizzaz_web/live/game_live/components/question_component.html.heex
+++ b/lib/quizzaz_web/live/game_live/components/question_component.html.heex
@@ -11,31 +11,31 @@
       >
         <%= label(f, :prompt, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :prompt,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :prompt) %>
 
         <%= label(f, :choice_1, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :choice_1,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :choice_1) %>
 
         <%= label(f, :choice_2, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :choice_2,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :choice_2) %>
 
         <%= label(f, :choice_3, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :choice_3,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :choice_3) %>
 
         <%= label(f, :choice_4, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :choice_4,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :choice_4) %>
 
@@ -44,25 +44,12 @@
         <%= label(f, :answer, class: "lg:text-2xl pb-2") %>
         <%= select(f, :answer, [1, 2, 3, 4],
           prompt: "select answer",
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :answer) %>
 
         <button type="submit" class="flex lg:flex-col items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-cyan-200"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-            />
-          </svg>
+          <%= add_or_update_icon(@question_action) %>
           <p class="font-bold text-xl lg:text-2xl">
             <%= add_or_update_btn(@question_action) %>
           </p>
@@ -79,25 +66,12 @@
       >
         <%= label(f, :answer, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :answer,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :answer) %>
 
         <button type="submit" class="flex lg:flex-col items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-cyan-200"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-            />
-          </svg>
+          <%= add_or_update_icon(@question_action) %>
           <p class="font-bold text-xl lg:text-2xl">
             <%= add_or_update_btn(@question_action) %>
           </p>
@@ -114,25 +88,12 @@
       >
         <%= label(f, :answer_list, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :answer_list,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :answer_list) %>
 
         <button type="submit" class="flex lg:flex-col items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-cyan-200"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-            />
-          </svg>
+          <%= add_or_update_icon(@question_action) %>
           <p class="font-bold text-xl lg:text-2xl">
             <%= add_or_update_btn(@question_action) %>
           </p>
@@ -149,25 +110,12 @@
       >
         <%= label(f, :prompt, class: "lg:text-2xl pb-2") %>
         <%= text_input(f, :prompt,
-          class: "rounded-lg mb-2 md:mb-4 text-purple-900 font-bold text-lg w-full"
+          class: "rounded-lg mb-2 md:mb-4 text-skin-input font-bold text-lg w-full"
         ) %>
         <%= error_tag(f, :prompt) %>
 
         <button type="submit" class="flex lg:flex-col items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-cyan-200"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-            />
-          </svg>
+          <%= add_or_update_icon(@question_action) %>
           <p class="font-bold text-xl lg:text-2xl">
             <%= add_or_update_btn(@question_action) %>
           </p>
