--- a/lib/quizzaz_web/live/play_live/index.html.heex
+++ b/lib/quizzaz_web/live/play_live/index.html.heex
@@ -6,7 +6,7 @@
         src={Routes.static_path(@socket, "/images/question.png")}
         alt="question head"
       />
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <.form
           let={f}
           for={@join_changeset}
@@ -14,22 +14,22 @@
           phx-submit="join"
           class="flex flex-col items-center w-full"
         >
-          <%= label(f, :session_id, class: "text-cyan-200 pt-4 pb-2") %>
+          <%= label(f, :session_id, class: "text-skin-secondary pt-4 pb-2") %>
           <%= text_input(f, :session_id,
-            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-3/4 lg:w-1/3"
+            class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg w-3/4 lg:w-1/3"
           ) %>
           <%= error_tag(f, :session_id) %>
 
-          <%= label(f, :name, class: "text-cyan-200 pt-4 pb-2") %>
+          <%= label(f, :name, class: "text-skin-secondary pt-4 pb-2") %>
           <%= text_input(f, :name,
-            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-3/4 lg:w-1/3"
+            class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg w-3/4 lg:w-1/3"
           ) %>
           <%= error_tag(f, :name) %>
 
           <button type="submit" class="m-4 flex flex-col items-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+              class="h-8 w-8 lg:h-10 lg:w-10 text-skin-secondary"
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
@@ -51,11 +51,11 @@
         </.form>
       </div>
     <% :joined -> %>
-      <div class="my-12 lg:my-20 p-8 lg:p-20 flex flex-col w-3/4 items-center gap-4 lg:gap-12 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+      <div class="my-12 lg:my-20 p-8 lg:p-20 flex flex-col w-3/4 items-center gap-4 lg:gap-12 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
         <h3 class="text-3xl lg:text-5xl text-center">Welcome to the game!</h3>
-        <p class="text-3xl lg:text-5xl text-cyan-200"><%= @name %></p>
+        <p class="text-3xl lg:text-5xl text-skin-secondary"><%= @name %></p>
         <h3 class="text-center lg:text-2xl">Please wait for the game to start</h3>
-        <p class="text-cyan-200 lg:text-2xl"><%= @session_id %></p>
+        <p class="text-skin-secondary lg:text-2xl"><%= @session_id %></p>
       </div>
     <% :playing -> %>
       <%= case @question do %>
@@ -64,7 +64,7 @@
             <%= for two_choices <- Enum.with_index(q.choices, 1) |> Enum.chunk_every(2) do %>
               <div class="flex flex-col items center gap-4 w-[45vw]">
                 <%= for {choice, i} <- two_choices do %>
-                  <button class="p-12 bg-purple-600 rounded-xl text-yellow-500 font-bold text-xl md:text-3xl lg:text-5xl text-center h-[45vh]" phx-click="answer_question" phx-value-answer={i}>
+                  <button class="p-12 bg-skin-secondary rounded-xl text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl text-center h-[45vh]" phx-click="answer_question" phx-value-answer={i}>
                     <%= choice %>
                   </button>
                 <% end %>
@@ -73,20 +73,20 @@
           </div>
         <% %Quizzaz.Games.Questions.OpenEnded{} -> %>
           <.form let={f} for={:open_ended_answer} phx-submit="answer_question">
-            <div class="flex flex-col items-center gap-4 my-4 lg:my-12 text-yellow-400 font-bold">
+            <div class="flex flex-col items-center gap-4 my-4 lg:my-12 text-skin-primary font-bold">
               <%= label(f, :answer, "Write your answer below:",
                 class: "text-xl lg:text-3xl lg:pb-4"
               ) %>
               <%= textarea(f, :answer,
                 class:
-                  "h-[75vh] md:w-[75vw] rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-1/8"
+                  "h-[75vh] md:w-[75vw] rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg w-1/8"
               ) %>
               <%= error_tag(f, :answer) %>
 
               <button type="submit" class="m-4 flex flex-col items-center">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-cyan-200"
+                  class="h-8 w-8 text-skin-secondary"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke="currentColor"
@@ -106,7 +106,7 @@
           <div phx-hook="Drag" id="scramble-letters-container" class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36">
             <ul class="dropzone-letters flex flex-row flex-wrap items-center gap-4" id="scramble-letters-list">
               <%= for {letter, i} <- Enum.with_index(@letters) do %>
-                <li class="drag-item draggable-item bg-purple-600 p-4 md:p-8 rounded-xl text-yellow-500 font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
+                <li class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
                   <%= letter %>
                 </li>
               <% end %>
@@ -114,7 +114,7 @@
               <button phx-click="answer_scramble_letters" class="m-4 flex flex-col items-center">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-cyan-200"
+                  class="h-8 w-8 text-skin-secondary"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke="currentColor"
@@ -126,14 +126,14 @@
                     d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
                   />
                 </svg>
-                <p class="font-bold text-xl md:text-3xl text-yellow-500">Answer Question</p>
+                <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
               </button>
           </div>
         <% %Quizzaz.Games.Questions.ScrambleWords{} -> %>
           <div phx-hook="Drag" id="scramble-word-container" class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36">
             <ul class="dropzone-words flex flex-row flex-wrap items-center gap-4" id="scramble-word-list">
               <%= for {word, i} <- Enum.with_index(@words) do %>
-                <li class="drag-item draggable-item bg-purple-600 p-4 md:p-8 rounded-xl text-yellow-500 font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
+                <li class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
                   <%= word %>
                 </li>
               <% end %>
@@ -141,7 +141,7 @@
               <button phx-click="answer_scramble_words" class="m-4 flex flex-col items-center">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-cyan-200"
+                  class="h-8 w-8 text-skin-secondary"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke="currentColor"
@@ -153,25 +153,25 @@
                     d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
                   />
                 </svg>
-                <p class="font-bold text-xl md:text-3xl text-yellow-500">Answer Question</p>
+                <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
               </button>
           </div>
         <% _ -> %>
           <h4>Waiting for question</h4>
       <% end %>
     <% :answered -> %>
-      <div class="mt-12 bg-purple-600 rounded-xl m-auto">
-        <h3 class="p-20 text-yellow-500 font-bold text-xl md:text-3xl lg:text-5xl">Great Job!</h3>
+      <div class="mt-12 bg-skin-secondary rounded-xl m-auto">
+        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">Great Job!</h3>
       </div>
     <% :paused -> %>
-      <div class="mt-12 bg-purple-600 rounded-xl m-auto">
-        <h3 class="p-20 text-yellow-500 font-bold text-xl md:text-3xl lg:text-5xl">The game is paused</h3>
+      <div class="mt-12 bg-skin-secondary rounded-xl m-auto">
+        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">The game is paused</h3>
       </div>
     <% :finished -> %>
-      <div class="mt-12 text-yellow-500 bg-purple-600 rounded-xl m-auto flex flex-col items-center p-8 md:p-12 lg:p-20">
+      <div class="mt-12 text-skin-primary bg-skin-secondary rounded-xl m-auto flex flex-col items-center p-8 md:p-12 lg:p-20">
       <h3 class="font-bold text-xl md:text-3xl lg:text-5xl mb-8">Game is finished</h3>
       <p class="font-bold">your score is:</p>
-      <p class="font-bold text-cyan-200"><%= @player.score %></p>
+      <p class="font-bold text-skin-secondary"><%= @player.score %></p>
       </div>
   <% end %>
 </div>
