--- a/lib/quizzaz_web/templates/layout/game.html.heex
+++ b/lib/quizzaz_web/templates/layout/game.html.heex
@@ -15,7 +15,10 @@
     >
     </script>
   </head>
-  <body class="bg-sky-500">
+  <body class={"#{get_theme(@conn)} bg-skin-primary"}>
+    <header>
+      <%= render("_settings.html", assigns) %>
+    </header>
     <div class="w-full">
       <%= @inner_content %>
     </div>
