--- a/lib/quizzaz_web/templates/page/public_games.html.heex
+++ b/lib/quizzaz_web/templates/page/public_games.html.heex
@@ -1,9 +1,9 @@
 <div class="flex flex-col items-center my-8 text-center">
-  <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+  <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
     <h2 class="text-xl lg:text-3xl px-8 pb-4 lg:p-8">Click on a game to begin hosting a session!</h2>
     <%= for game <- @games do %>
       <%= link to: Routes.host_index_path(@conn, :index, game.id, gen_rand_id()), 
-    class: "flex flex-col lg:gap-2 items-center bg-cyan-200 rounded-xl p-4 lg:p-8 w-3/4 text-black lg:text-3xl" do %>
+    class: "flex flex-col lg:gap-2 items-center bg-skin-item rounded-xl p-4 lg:p-8 w-3/4 text-skin-info lg:text-3xl" do %>
         <p class="lg:text-5xl"><%= game.name %></p>
         <p><%= game.questions %> questions</p>
       <% end %>
