--- a/lib/quizzaz_web/templates/user_registration/new.html.heex
+++ b/lib/quizzaz_web/templates/user_registration/new.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center my-8 text-center">
-  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold">
+  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
     <h2 class="text-xl lg:text-3xl text-left lg:text-center p-2 lg:p-8">Sign up to start creating your own games!</h2>
     <.form
       let={f}
@@ -16,21 +16,21 @@
       <%= email_input(f, :email,
         required: true,
         placeholder: "email",
-        class: "rounded-lg my-8 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg my-8 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :email) %>
 
       <%= password_input(f, :password,
         required: true,
         placeholder: "password",
-        class: "rounded-lg my-8 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg my-8 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :password) %>
 
       <button type="submit" class="m-4 flex flex-col items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+          class="h-8 w-8 lg:h-10 lg:w-10 text-skin-secondary"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
