--- a/lib/quizzaz_web/templates/user_session/new.html.heex
+++ b/lib/quizzaz_web/templates/user_session/new.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center my-8 text-center">
-  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold">
+  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
     <.form
       let={f}
       for={@conn}
@@ -16,14 +16,14 @@
       <%= email_input(f, :email,
         required: true,
         placeholder: "email",
-        class: "rounded-lg my-8 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg my-8 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <% error_tag(f, :email) %>
 
       <%= password_input(f, :password,
         required: true,
         placeholder: "password",
-        class: "rounded-lg my-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg my-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <% error_tag(f, :password) %>
 
@@ -35,7 +35,7 @@
       <button type="submit" class="m-4 flex flex-col items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+          class="h-8 w-8 lg:h-10 lg:w-10 text-skin-secondary"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -58,7 +58,7 @@
 
     <%= link("Forgot your password?",
       to: Routes.user_reset_password_path(@conn, :new),
-      class: "text-cyan-200 m-4"
+      class: "text-skin-secondary m-4"
     ) %>
   </div>
 </div>
