--- a/lib/quizzaz_web/templates/user_settings/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_settings/edit.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center my-8 text-center">
-  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold">
+  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-skin-secondary rounded-lg p-4 text-skin-primary font-bold">
     <.form
       let={f}
       for={@email_changeset}
@@ -15,26 +15,26 @@
 
       <%= hidden_input(f, :action, name: "action", value: "update_email") %>
 
-      <%= label(f, :email, "email", class: "text-cyan-200 pt-4 pb-2") %>
+      <%= label(f, :email, "email", class: "text-skin-secondary pt-4 pb-2") %>
       <%= email_input(f, :email,
         required: true,
-        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :email) %>
 
-      <%= label(f, :current_password, "current password", class: "text-cyan-200 pb-2") %>
+      <%= label(f, :current_password, "current password", class: "text-skin-secondary pb-2") %>
       <%= password_input(f, :current_password,
         required: true,
         name: "current_password",
         id: "current_password_for_email",
-        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :current_password) %>
 
       <button type="submit" class="m-4 flex flex-col items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-cyan-200"
+          class="h-6 w-6 text-skin-secondary"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -65,33 +65,33 @@
 
       <%= hidden_input(f, :action, name: "action", value: "update_password") %>
 
-      <%= label(f, :password, "New password", class: "text-cyan-200 pt-4 pb-2") %>
+      <%= label(f, :password, "New password", class: "text-skin-secondary pt-4 pb-2") %>
       <%= password_input(f, :password,
         required: true,
-        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :password) %>
 
-      <%= label(f, :password_confirmation, "Confirm new password", class: "text-cyan-200 pb-2") %>
+      <%= label(f, :password_confirmation, "Confirm new password", class: "text-skin-secondary pb-2") %>
       <%= password_input(f, :password_confirmation,
         required: true,
-        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :password_confirmation) %>
 
-      <%= label(f, :current_password, for: "current_password_for_password", class: "text-cyan-200 pb-2") %>
+      <%= label(f, :current_password, for: "current_password_for_password", class: "text-skin-secondary pb-2") %>
       <%= password_input(f, :current_password,
         required: true,
         name: "current_password",
         id: "current_password_for_password",
-        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+        class: "rounded-lg mb-4 mx-2 text-skin-input font-bold text-lg lg:w-1/3"
       ) %>
       <%= error_tag(f, :current_password) %>
 
       <button type="submit" class="m-4 flex flex-col items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-cyan-200"
+          class="h-6 w-6 text-skin-secondary"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
