--- a/lib/quizzaz_web/templates/layout/game.html.heex
+++ b/lib/quizzaz_web/templates/layout/game.html.heex
@@ -17,7 +17,7 @@
   </head>
   <body class={"#{get_theme(@conn)} bg-skin-primary"}>
     <header>
-      <%= render("_settings.html", assigns) %>
+      <%= render("_game_settings.html", assigns) %>
     </header>
     <div class="w-full">
       <%= @inner_content %>
