--- a/lib/quizzaz_web/live/play_live/index.html.heex
+++ b/lib/quizzaz_web/live/play_live/index.html.heex
@@ -1,12 +1,7 @@
 <div class="flex flex-col items-center">
   <%= case @state do %>
     <% :not_joined -> %>
-      <img
-        class="w-28 m-12"
-        src={Routes.static_path(@socket, "/images/question.png")}
-        alt="question head"
-      />
-      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold">
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-skin-secondary rounded-lg py-8 text-skin-primary font-bold mt-20">
         <.form
           let={f}
           for={@join_changeset}
@@ -64,7 +59,11 @@
             <%= for two_choices <- Enum.with_index(q.choices, 1) |> Enum.chunk_every(2) do %>
               <div class="flex flex-col items center gap-4 w-[45vw]">
                 <%= for {choice, i} <- two_choices do %>
-                  <button class="p-12 bg-skin-secondary rounded-xl text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl text-center h-[45vh]" phx-click="answer_question" phx-value-answer={i}>
+                  <button
+                    class="p-12 bg-skin-secondary rounded-xl text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl text-center h-[45vh]"
+                    phx-click="answer_question"
+                    phx-value-answer={i}
+                  >
                     <%= choice %>
                   </button>
                 <% end %>
@@ -103,75 +102,101 @@
             </div>
           </.form>
         <% %Quizzaz.Games.Questions.ScrambleLetters{} -> %>
-          <div phx-hook="Drag" id="scramble-letters-container" class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36">
-            <ul class="dropzone-letters flex flex-row flex-wrap items-center gap-4" id="scramble-letters-list">
+          <div
+            phx-hook="Drag"
+            id="scramble-letters-container"
+            class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36"
+          >
+            <ul
+              class="dropzone-letters flex flex-row flex-wrap items-center gap-4"
+              id="scramble-letters-list"
+            >
               <%= for {letter, i} <- Enum.with_index(@letters) do %>
-                <li class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
+                <li
+                  class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl"
+                  draggable="true"
+                  id={to_string(i)}
+                >
                   <%= letter %>
                 </li>
               <% end %>
             </ul>
-              <button phx-click="answer_scramble_letters" class="m-4 flex flex-col items-center">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-skin-secondary"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
-                  />
-                </svg>
-                <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
-              </button>
+            <button phx-click="answer_scramble_letters" class="m-4 flex flex-col items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-8 w-8 text-skin-secondary"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
+                />
+              </svg>
+              <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
+            </button>
           </div>
         <% %Quizzaz.Games.Questions.ScrambleWords{} -> %>
-          <div phx-hook="Drag" id="scramble-word-container" class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36">
-            <ul class="dropzone-words flex flex-row flex-wrap items-center gap-4" id="scramble-word-list">
+          <div
+            phx-hook="Drag"
+            id="scramble-word-container"
+            class="flex flex-col items-center gap-8 p-4 mt-20 md:mt-36"
+          >
+            <ul
+              class="dropzone-words flex flex-row flex-wrap items-center gap-4"
+              id="scramble-word-list"
+            >
               <%= for {word, i} <- Enum.with_index(@words) do %>
-                <li class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl" draggable="true" id={to_string(i)}>
+                <li
+                  class="drag-item draggable-item bg-skin-secondary p-4 md:p-8 rounded-xl text-skin-primary font-bold text-xl md:text-3xl"
+                  draggable="true"
+                  id={to_string(i)}
+                >
                   <%= word %>
                 </li>
               <% end %>
             </ul>
-              <button phx-click="answer_scramble_words" class="m-4 flex flex-col items-center">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-8 w-8 text-skin-secondary"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
-                  />
-                </svg>
-                <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
-              </button>
+            <button phx-click="answer_scramble_words" class="m-4 flex flex-col items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-8 w-8 text-skin-secondary"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
+                />
+              </svg>
+              <p class="font-bold text-xl md:text-3xl text-skin-primary">Answer Question</p>
+            </button>
           </div>
         <% _ -> %>
           <h4>Waiting for question</h4>
       <% end %>
     <% :answered -> %>
       <div class="mt-12 bg-skin-secondary rounded-xl m-auto">
-        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">Great Job!</h3>
+        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">
+          Great Job!
+        </h3>
       </div>
     <% :paused -> %>
       <div class="mt-12 bg-skin-secondary rounded-xl m-auto">
-        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">The game is paused</h3>
+        <h3 class="p-20 text-skin-primary font-bold text-xl md:text-3xl lg:text-5xl">
+          The game is paused
+        </h3>
       </div>
     <% :finished -> %>
       <div class="mt-12 text-skin-primary bg-skin-secondary rounded-xl m-auto flex flex-col items-center p-8 md:p-12 lg:p-20">
-      <h3 class="font-bold text-xl md:text-3xl lg:text-5xl mb-8">Game is finished</h3>
-      <p class="font-bold">your score is:</p>
-      <p class="font-bold text-skin-secondary"><%= @player.score %></p>
+        <h3 class="font-bold text-xl md:text-3xl lg:text-5xl mb-8">Game is finished</h3>
+        <p class="font-bold">your score is:</p>
+        <p class="font-bold text-skin-secondary"><%= @player.score %></p>
       </div>
   <% end %>
 </div>
